--- a/src/main/resources/com/acunetix/plugin/NCScanBuilder/config.properties
+++ b/src/main/resources/com/acunetix/plugin/NCScanBuilder/config.properties
@@ -1,5 +1,5 @@
 ncServerURL=NC Server URL
-ncServerURLDescr=like <kbd>https://www.acunetix360.com</kbd>.
+ncServerURLDescr=URL, like <kbd>https://online.acunetix360.com</kbd>.
 apiToken=API Token
 apiTokenDescr=It can be found at "API Settings" page in the Acunetix 360 which is reachable under "Your Accounts" section in Acunetix 360 Site. Token's user must have "start scan permission" on to be scanned website.
 ncScanType=Scan Type
@@ -10,5 +10,3 @@ ncProfileName=Profile Name
 profileNameDescr=
 ncBaseScanId=Base Scan Id:
 baseScanIdDescr=Base scan ID like, <kbd>8539ae41-a816-4d43-b91e-3b4296002d72</kbd>. Base scan ID is a scan ID which can be retrieved from "/scans/list" endpoint of Acunetix 360 API.
-
-TestConnection=
